objects/User.object
<CustomObject>
    <fields>
        <fullName>Average_Opportunity_Amount__c</fullName>
        <description>The average opportunity amount for opportunities owned by the user.</description>
        <label>Opportunity Average Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(Contact.Account.Name == null, BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
        <label>Asset Management View</label>
        <picklist>
            <picklistValues>
                <fullName>Hidden</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update and Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours__c</fullName>
        <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CIManagementView__c</fullName>
        <label>CI Management View</label>
        <picklist>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read-Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update and Delete</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC Client Management user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_QV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
        <label>Manage QuickViews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Schedule_CR_and_Blackouts_During_Overlap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows to schedule change requests during a blackout and create a blackout when change requests exists for that duration.</inlineHelpText>
        <label>Override Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <label>Business Org</label>
        <picklist>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turolla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valmova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate and Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <description>C&amp;E field
Should be dependent on the Division you select.</description>
        <label>Team</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DCS - AC Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - ACR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - DSFRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - EAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Food Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - FRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - IDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Indirect Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - IRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Team Madhur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Team Maniam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Team Partha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Team Sivakumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Team Sunil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Users (EER)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS - Adriatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS - Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS - Business Development</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Centre_Default_Email__c</fullName>
        <label>Call Centre Default Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Created_for_CE_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be used for when we are migrating data for Regional Roll Outs.</description>
        <label>Created for CE Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Print_Logo__c</fullName>
        <label>Default Print Logo</label>
        <picklist>
            <picklistValues>
                <fullName>Danfoss</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DEVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Danfoss Segment</label>
        <picklist>
            <controllingField>Business_Org__c</controllingField>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallEventTimestamp__c</fullName>
        <description>The timestamp of the most recent call event (deliver, transfer...) that this user has handled</description>
        <label>Most Recent Call Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Call Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCall__c</fullName>
        <label>Most Recent Call</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Agent_Id__c</fullName>
        <description>NVM Agent Id for Contact World for Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>NVM Agent Id for Contact World for Salesforce. This should be set to the correct NVM Agent Id to make sure that call tasks are assigned to the correct Salesforce user.</inlineHelpText>
        <label>NVM Agent Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Cell__c</fullName>
        <description>NewVoiceMedia click to dial Cell Phone</description>
        <formula>IF( 
        LEN( MobilePhone  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(MobilePhone , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   MobilePhone  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Cell Phone</inlineHelpText>
        <label>NVM Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Extension__c</fullName>
        <description>NewVoiceMedia click to dial Extension Phone</description>
        <formula>IF( 
        LEN( Extension  )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Extension , &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   Extension  , &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Extension Phone</inlineHelpText>
        <label>NVM Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Phone__c</fullName>
        <description>NewVoiceMedia click to dial Phone</description>
        <formula>IF( 
        LEN( Phone )&gt;0 , 
        HYPERLINK( &quot;/apex/NVMContactWorld__NVM_AgentUI_ClickToDialInitiator?number=&quot; &amp; 
                   SUBSTITUTE(Phone, &quot;+&quot;, &quot;%2B&quot;) &amp; 
                   &quot;&amp;oid=&quot; &amp; Id &amp; 
                   &quot;&amp;name=&quot; &amp; FirstName &amp; &quot;%20&quot; &amp;  LastName &amp; 
                   &quot;&amp;type=User&quot;, 
                   Phone, &quot;nvm-clicktodial&quot;) 
                   &amp; &quot; &quot; &amp; IMAGE( &quot;../servlet/servlet.FileDownload?file=015A0000000FU0f&quot;, &quot;Dial&quot;), &quot;&quot;)</formula>
        <inlineHelpText>Click to dial Phone</inlineHelpText>
        <label>NVM Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Users__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Users</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Average_Age_Lost__c</fullName>
        <description>The average number of days for an opportunity to become lost.</description>
        <label>Opportunity Average Age Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Average_Age_Won__c</fullName>
        <label>Opportunity Average Age Won</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Sales_Group__c</fullName>
        <description>PS Store SAP Sales Group code</description>
        <label>PS Sales Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Sales_Office__c</fullName>
        <description>PS Store SAP Sales Office code</description>
        <label>PS Sales Office</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersNo__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>8-digital personnel number.</inlineHelpText>
        <label>PersNo</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Country_Code__c</fullName>
        <description>Used for presetting phone country codes when creating prospects</description>
        <label>Phone Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>BM: Bermuda (+1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BV: BV (+1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ: Algeria (+213)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF: Burkina-Faso (+226)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ: Benin (+229)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS: Bahamas (+242)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO: Angola (+244)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB: Barbados (+246)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI: Burundi (+257)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW: Botswana (+267)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG: Antigua/Barbuda (+268)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW: Aruba (+297)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE: Belgium (+32)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Albania (+355)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG: Bulgaria (+359)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: Armenia (+374)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY: Belarus (+375)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD: Andorra (+376)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT: Austria (+43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU: Bouvet Island (+47)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ: Belize (+501)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR: Argentina (+54)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR: Brazil (+55)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO: Bolivia (+591)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU: Australia (+61)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD: Bangladesh (+880)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF: Afghanistan (+93)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH: Bahrain (+973)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT: Bhutan (+975)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ: Azerbaijan (+994)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>C&amp;E field
Used for identifying the Region of the User</description>
        <label>Region</label>
        <picklist>
            <controllingField>Business_Org__c</controllingField>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS: Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS: APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS: China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS: Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>1010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1410</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1420</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1430</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1450</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1470</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1480</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1550</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1710</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6320</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions__c</fullName>
        <description>Time when Terms And Conditions was accepted by User from Portal</description>
        <inlineHelpText>Time when Terms And Conditions was accepted by User from Portal</inlineHelpText>
        <label>Terms And Conditions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions_Status__c</fullName>
        <label>Terms and Conditions Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>